--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Hello world!</h1>
+<!--<div class="video-responsive">-->
+<!--    <iframe width="1900" height="350" src="https://www.youtube.com/embed/qYn02U3en8I?rel=0&amp;autoplay=1&mute=1" allowfullscreen></iframe>-->
+<!--</div>-->
+
+<div>
+    <h1>hello world!</h1>
+</div>
 
 <script src="js/main.js"></script>
 </body>
