--- a/src/main/resources/templates/first.html
+++ b/src/main/resources/templates/first.html
@@ -9,5 +9,6 @@
 <ul>
     <li th:each="info : ${infos}" th:text="${info}"></li>
 </ul>
+<a href=".." class="btn btn-outline-secondary" id="button-addon1">Retour</a>
 </body>
 </html>
