--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,12 @@
 <!--    <iframe width="1900" height="350" src="https://www.youtube.com/embed/qYn02U3en8I?rel=0&amp;autoplay=1&mute=1" allowfullscreen></iframe>-->
 <!--</div>-->
 
-<div>
+<div id="main">
     <h1>hello world!</h1>
+    <ul>
+        <li><a href="/first"> premiere page </a></li>
+        <li><a href="/player/all"> tous les joueur</a></li>
+    </ul>
 </div>
 
 <script src="js/main.js"></script>
