--- a/src/main/resources/templates/player/all.html
+++ b/src/main/resources/templates/player/all.html
@@ -20,6 +20,7 @@
         </div>
     </div>
 </div>
+    <a href=".." class="btn btn-outline-secondary" id="button-addon1">Retour</a>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
