--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <h1>hello world!</h1>
 <ul>
     <li><a href="/first"> premiere page </a></li>
-    <li><a href="/player/all"> tous les joueur</a></li>
+    <li><a href="/player/all"> tous les joueurs</a></li>
 </ul>
 
 <script src="js/main.js"></script>
